--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "php": "^7.1",
         "symfony/dependency-injection": "^3.3 || ^4.0",
         "symfony/framework-bundle": "^3.0 || ^4.0",
+        "symfony/routing": "^2.7|^3.0|^4.0",
+        "symfony/http-foundation": "^2.7|^3.0|^4.0",
+        "knpuniversity/oauth2-client-bundle": "~1.0",
         "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
