--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -6,7 +6,7 @@ services:
 
     IDCI\Bundle\KeycloakSecurityBundle\:
         resource: '../../*'
-        exclude: '../../{Entity,Migrations,Tests}'
+        exclude: '../../{Entity,Migrations,Tests,Provider/KeycloakResourceOwner.php}'
 
     IDCI\Bundle\KeycloakSecurityBundle\Security\Authenticator\KeycloakAuthenticator:
         arguments: ["@knpu.oauth2.registry", "@router"]
