--- a/Resources/config/security.yaml
+++ b/Resources/config/security.yaml
@@ -2,3 +2,5 @@ security:
     providers:
         idci_keycloak_security_provider:
             id: IDCI\Bundle\KeycloakSecurityBundle\Security\User\KeycloakUserProvider
+        idci_keycloak_bearer_security_provider:
+            id: IDCI\Bundle\KeycloakSecurityBundle\Security\User\KeycloakBearerUserProvider
