--- a/Resources/config/routing.yaml
+++ b/Resources/config/routing.yaml
@@ -1,11 +1,11 @@
 idci_security_auth_connect_keycloak:
-    path: /auth/connect/keycloak
-    defaults: { _controller: IDCIKeycloakSecurityBundle:Keycloak:connect }
+    path:       /auth/connect/keycloak
+    controller: IDCI\Bundle\KeycloakSecurityBundle\Controller\KeycloakController::connectAction
 
 idci_security_auth_connect_check_keycloak:
-    path: /auth/connect-check/keycloak
-    defaults: { _controller: IDCIKeycloakSecurityBundle:Keycloak:connectCheck }
+    path:       /auth/connect-check/keycloak
+    controller: IDCI\Bundle\KeycloakSecurityBundle\Controller\KeycloakController::connectCheckAction
 
 idci_security_auth_logout:
-    path: /auth/logout
-    defaults: { _controller: IDCIKeycloakSecurityBundle:Keycloak:logout }
+    path:       /auth/logout
+    controller: IDCI\Bundle\KeycloakSecurityBundle\Controller\KeycloakController::logoutAction
