--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "symfony-bundle",
     "description": "Allows you to easily handle you application security thanks to keycloak.",
     "keywords": [],
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "Benjamin Boudier",
