--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,12 @@
     ],
     "authors": [
         {
-            "name": "Benjamin Boudier",
-            "email": "benjamin.boudier@idci-consulting.fr"
+            "name": "Samir Comprés",
+            "email": "scompres@syneteksolutions.com"
+        },
+        {
+            "name": "Yansell Rivas",
+            "email": "yrivas@syneteksolutions.com"
         }
     ],
     "require": {
