feat(Roles): Adding roles integration
 * Added admin roles controller
 * Added admin roles service
 * Separated user service

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -28,7 +28,12 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
 
-    nti.keycloak.admin.service:
+    nti.keycloak.admin.user.service:
         public: true
-        class: NTI\KeycloakSecurityBundle\Service\KeycloakAdminService
+        class: NTI\KeycloakSecurityBundle\Service\KeycloakAdminUserService
+        arguments: ["@service_container"]
+
+    nti.keycloak.admin.role.service:
+        public: true
+        class: NTI\KeycloakSecurityBundle\Service\KeycloakAdminRoleService
         arguments: ["@service_container"]
