feat(Api & User Entity):
 * Added users & roles api
 * Fixed error message bug
 * Added denied roles from user atributes
 * Loading created_on field on user entity
 * Added local user to user entity

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -19,6 +19,8 @@ services:
     NTI\KeycloakSecurityBundle\Security\User\KeycloakUserProvider:
         tags:
             - { name: nti_keycloak_security.user_provider, alias: oauth }
+        arguments:
+            $container: '@service_container'
 
     NTI\KeycloakSecurityBundle\Security\User\KeycloakBearerUserProvider:
         arguments:
