feat(Requests): Added keycloak security service & set request service type as an option

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -40,3 +40,8 @@ services:
         public: true
         class: NTI\KeycloakSecurityBundle\Service\KeycloakAdminRoleService
         arguments: ["@service_container"]
+
+    nti.keycloak.security.service:
+        public: true
+        class: NTI\KeycloakSecurityBundle\Service\KeycloakSecurityService
+        arguments: ["@service_container"]
