--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -15,6 +15,8 @@ services:
         tags: ['controller.service_arguments']
 
     NTI\KeycloakSecurityBundle\Security\Authenticator\KeycloakAuthenticator:
+        arguments:
+            $container: '@service_container'
 
     NTI\KeycloakSecurityBundle\Security\User\KeycloakUserProvider:
         tags:
