--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     "license": "GPL-3.0-or-later",
     "authors": [
         {
-            "name": "Benjamin Boudier",
+            "name": "Gabriel BONDAZ",
+            "email": "gabriel.bondaz@idci-consulting.fr"
+        },
+        {
+            "name": "Benjamin BOUDIER",
             "email": "benjamin.boudier@idci-consulting.fr"
         }
     ],
@@ -21,7 +25,7 @@
         "symfony/routing": "^2.7|^3.0|^4.0",
         "symfony/http-foundation": "^2.7|^3.0|^4.0",
         "knpuniversity/oauth2-client-bundle": "~1.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
