--- a/composer.json
+++ b/composer.json
@@ -20,22 +20,22 @@
     ],
     "require": {
         "php": "^7.1",
-        "symfony/dependency-injection": "^3.3 || ^4.0",
-        "symfony/framework-bundle": "^3.0 || ^4.0",
-        "symfony/routing": "^2.7|^3.0|^4.0",
-        "symfony/http-foundation": "^2.7|^3.0|^4.0",
+        "symfony/dependency-injection": "^3.3 || ^4.0 || ^5.0",
+        "symfony/framework-bundle": "^3.0 || ^4.0 || ^5.0",
+        "symfony/routing": "^2.7|^3.0|^4.0 || ^5.0",
+        "symfony/http-foundation": "^2.7|^3.0|^4.0 || ^5.0",
         "knpuniversity/oauth2-client-bundle": "~1.0",
         "guzzlehttp/guzzle": "^6.3 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
-        "symfony/expression-language": "^3.0 || ^4.0",
-        "symfony/finder": "^3.0 || ^4.0",
-        "symfony/form": "^3.0 || ^4.0",
-        "symfony/stopwatch": "^3.0 || ^4.0",
+        "symfony/expression-language": "^3.0 || ^4.0 || ^5.0",
+        "symfony/finder": "^3.0 || ^4.0 || ^5.0",
+        "symfony/form": "^3.0 || ^4.0 || ^5.0",
+        "symfony/stopwatch": "^3.0 || ^4.0|| ^5.0",
         "symfony/twig-bundle": "*",
-        "symfony/validator": "^3.0 || ^4.0",
-        "symfony/yaml": "^3.0 || ^4.0"
+        "symfony/validator": "^3.0 || ^4.0 || ^5.0",
+        "symfony/yaml": "^3.0 || ^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": {
