--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/dependency-injection": ">=4.1.12",
         "symfony/framework-bundle": ">=4.1.12",
         "symfony/routing": ">=3.0",
+        "symfony/security-bundle": ">=3.0",
         "symfony/http-foundation": ">=3.4.35",
         "knpuniversity/oauth2-client-bundle": "~1.0",
         "guzzlehttp/guzzle": ">=6.3"
