feat(IDCIKeycloakSecurityBundle) Refactiring Bundle
 * Added Service for save keycloak configurations.

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -47,3 +47,8 @@ services:
         public: true
         class: NTI\KeycloakSecurityBundle\Service\KeycloakSecurityService
         arguments: ["@service_container"]
+
+    nti.keycloak.api.configuration.service:
+        public: true
+        class: NTI\KeycloakSecurityBundle\Service\KeycloakApiConfigurationService
+        arguments: ["@service_container"]
