--- a/composer.json
+++ b/composer.json
@@ -15,24 +15,23 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "symfony/dependency-injection": ">=4.1.12",
-        "symfony/framework-bundle": ">=4.1.12",
-        "symfony/routing": ">=3.0",
-        "symfony/security-bundle": ">=3.0",
-        "symfony/http-foundation": ">=3.4.35",
-        "knpuniversity/oauth2-client-bundle": "~1.0",
-        "guzzlehttp/guzzle": ">=6.3"
+        "symfony/dependency-injection": "5.*",
+        "symfony/framework-bundle": "5.*",
+        "symfony/routing": "5.*",
+        "symfony/security-bundle": "5.*",
+        "symfony/http-foundation": "5.*",
+        "knpuniversity/oauth2-client-bundle": "2.*",
+        "guzzlehttp/guzzle": "7.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "symfony/expression-language": ">=3.0",
-        "symfony/finder": ">=3.0",
-        "symfony/form": ">=3.0",
-        "symfony/stopwatch": ">=3.0",
-        "symfony/twig-bundle": "*",
-        "symfony/validator": ">=3.0",
-        "symfony/yaml": ">=3.0"
+        "phpunit/phpunit": "*",
+        "symfony/expression-language": "5.*",
+        "symfony/finder": "5.*",
+        "symfony/form": "5.*",
+        "symfony/stopwatch": "5.*",
+        "symfony/twig-bundle": "5.*",
+        "symfony/validator": "5.*",
+        "symfony/yaml": "5.*"
     },
     "autoload": {
         "psr-4": {
