Add Keycloak help guides for client configuration, client credentials flow, troubleshooting and user authorization request

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         {
             "name": "Benjamin BOUDIER",
             "email": "benjamin.boudier@idci-consulting.fr"
+        },
+        {
+            "name": "Camille SCHWARZ",
+            "email": "camille54460@gmail.com"
         }
     ],
     "require": {
